# zaimu

./: Cargo.toml  Dioxus.toml  architecture.drawio  package-lock.json
assets/: tailwind.css
assets/styling/: detail.css  home.css  main.css  navbar.css  plan.css
src/: main.rs  util.rs
src/components/: mod.rs  navbar.rs
src/components/detail/: income.rs  mod.rs  outcome.rs  summary.rs
src/components/plan/: combined_list.rs  jobs.rs  mod.rs
src/finance/: mod.rs  setting.rs
src/finance/api/: detail.rs  mod.rs  plan.rs
src/finance/detail/: adjustment.rs  income.rs  mod.rs  outcome.rs  saving.rs  setting.rs
src/finance/detail/repository/: db_dummy.rs  mod.rs
src/finance/plan/: future_inspector.rs  income.rs  job.rs  mod.rs  monthly_outcome.rs  temporary_income.rs
src/finance/plan/income/: job.rs  mod.rs
src/finance/plan/outcome/: mod.rs  monthly_outcome.rs  outcome.rs  temporary_outcome.rs
src/finance/plan/repository/: db_dummy.rs  mod.rs
src/views/: detail.rs  home.rs  mod.rs  plan.rs
